<resources>
    <string name="app_name">CarrierPigeon</string>
    <string name="add_new_pigeon">Add new pigeon</string>
    <string name="series">Series</string>
    <string name="nickname">Nickname</string>
    <string name="color">Color</string>
    <string name="details_about_the_pigeon">Details about the pigeon</string>
    <string name="save_pigeon">Save pigeon</string>
    <string name="welcome_comma_first_name_of_user">Welcome, %s</string>
    <string name="pigeons">Pigeons</string>
    <string name="families">Families</string>
    <string name="pigeons_flights">Pigeons flights</string>

    <!-- Permissions dialogs -->
    <string name="permission_rationale_dialog_title">Permissions Needed</string>
    <string name="permission_rationale_dialog_message">We need permissions to camera and microphone in order to use the app.</string>
    <string name="permission_rationale_dialog_positive_button_text">Allow</string>
    <string name="permission_rationale_dialog_negative_button_text">No thanks</string>
    <string name="settings_dialog_title">Permission Needed</string>
    <string name="settings_dialog_message">Give permission manually inside the app\'s settings</string>
    <string name="settings_dialog_positive_button_text">Go to settings</string>
    <string name="settings_dialog_negative_button_text">No thanks</string>
    <string name="series_cannot_be_empty">Series cannot be empty!</string>
    <string name="nickname_cannot_be_empty">Nickname cannot be empty!</string>
    <string name="color_cannot_be_empty">Color cannot be empty!</string>
    <string name="are_you_sure_you_want_to_delete_it">Are you sure you want to delete it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create_profile">Create profile</string>
    <string name="save_profile">Save profile</string>
    <string name="phone_number_required"><font color='#DB392E'>*</font>Phone number</string>
    <string name="first_name_required"><font color='#DB392E'>*</font>First name</string>
    <string name="last_name_required"><font color='#DB392E'>*</font>Last name</string>
    <string name="home_address_required"><font color='#DB392E'>*</font>Home address</string>
    <string name="phone_number_cannot_be_empty">Phone number cannot be empty!</string>
    <string name="first_name_cannot_be_empty">First name cannot be empty!</string>
    <string name="last_name_cannot_be_empty">Last name cannot be empty!</string>
    <string name="home_address_cannot_be_empty">Home address cannot be empty!</string>
    <string name="edit_pigeon">Edit pigeon</string>
    <string name="save_changes">Save changes</string>
    <string name="pedigree_pigeon">Pédigree Pigeon:\n%s %s</string>
    <string name="nr">No.</string>
    <string name="country">Country</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="vaccine">Vaccine</string>
    <string name="no_of_vaccines">No. of vaccines</string>
    <string name="add_pigeons_to_flight">Add pigeons to flight</string>
    <string name="delete_pigeons_from_flight">Delete pigeons from flight</string>
    <string name="no_pigeons_available">No pigeons available!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sex">Sex</string>
    <string name="ring_series">Ring series</string>
    <string name="birthday">Birthday</string>
    <string name="pigeon_age">Age: %s Year %s Month %s Day</string>
    <string name="pigeon_vaccine">Vaccine:</string>
    <string name="ring_series_format">%s %s %s</string>
    <string name="two_strings_format">%s %s</string>
    <string name="nr_of_flight_format">%d</string>
    <string name="click_to_see_details">&#x2939;Click to see details&#x2938;</string>
    <string name="empty" />
    <string name="pigeon_eye_photo">Pigeon eye photo</string>
    <string name="select_photo_from_gallery">Select photo from Gallery</string>
    <string name="capture_photo_from_camera">Capture photo from camera</string>
    <string name="pigeon_photo">Pigeon photo</string>
    <string name="profile">Profile</string>
    <string name="email_address_optional">Email address</string>
    <string name="pdf_title">Pigeons flight PDF.pdf</string>
    <string name="the_list_of_boarded_pigeons">The list of boarded pigeons</string>
    <string name="pigeon_data">Pigeon data</string>
    <string name="fancier">Fancier: %s %s</string>
    <string name="phone_number">Phone number: %s</string>
    <string name="home_address">Home address: %s</string>
    <string name="add_new_family">Add new family</string>
    <string name="save_family">Save family</string>
    <string name="select_mother">Select mother</string>
    <string name="select_father">Select father</string>
    <string name="cannot_read_pdf_file">Can\'t read pdf file</string>
    <string name="header_text">Header text</string>
</resources>