<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@color/gray"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingVertical="@dimen/space_10"
    android:showDividers="middle|end"
    android:weightSum="12">

    <TextView
        android:id="@+id/nr"
        style="@style/TableItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/nr"
        android:textColor="@color/light_blue" />

    <TextView
        android:id="@+id/ring_series"
        style="@style/TableItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="start"
        android:paddingHorizontal="@dimen/space_3"
        android:text="@string/ring_series"
        android:textColor="@color/light_blue" />


    <TextView
        android:id="@+id/gender"
        style="@style/TableItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sex"
        android:textColor="@color/light_blue" />

    <TextView
        android:id="@+id/color"
        style="@style/TableItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="start"
        android:paddingHorizontal="@dimen/space_3"
        android:text="@string/color"
        android:textColor="@color/light_blue" />

    <TextView
        android:id="@+id/vaccine"
        style="@style/TableItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="start"
        android:paddingHorizontal="@dimen/space_3"
        android:text="@string/vaccine"
        android:textColor="@color/light_blue" />
</LinearLayout>
