<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="@dimen/space_53"
        android:layout_height="@dimen/space_53"
        android:layout_marginStart="@dimen/space_20"
        android:background="@drawable/bg_round_white_ripple"
        android:contentDescription="@null"
        android:src="@drawable/ic_back_button"
        android:translationZ="@dimen/space_12"
        app:layout_constraintBottom_toBottomOf="@id/welcome_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_label"
        style="@style/SubTitleLabel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_108"
        android:background="@drawable/bg_top_view_profiles"
        android:gravity="center"
        android:paddingTop="@dimen/space_20"
        android:paddingBottom="@dimen/space_20"
        android:text="@string/pigeons_flights"
        android:translationZ="@dimen/space_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_10"
        android:contentDescription="@null"
        android:src="@drawable/ic_progress_bar_dummy"
        android:translationZ="@dimen/space_10"
        app:layout_constraintBottom_toBottomOf="@id/welcome_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/add_button"
        android:layout_width="@dimen/space_53"
        android:layout_height="@dimen/space_53"
        android:layout_marginEnd="@dimen/space_20"
        android:background="@drawable/bg_round_white_ripple"
        android:contentDescription="@null"
        android:src="@drawable/ic_export"
        android:translationZ="@dimen/space_10"
        app:layout_constraintBottom_toBottomOf="@id/welcome_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_label">

        <TableRow
            android:id="@+id/table_row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue"
            android:padding="10dp"
            android:weightSum="7">

            <TextView
                android:id="@+id/nr"
                style="@style/TableItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_1"
                android:layout_weight="1"
                android:text="@string/nr" />

            <TextView
                android:id="@+id/country"
                style="@style/TableItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_1"
                android:layout_weight="1"
                android:text="@string/country" />

            <TextView
                android:id="@+id/date_of_birth"
                style="@style/TableItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_1"
                android:layout_weight="1"
                android:text="@string/date_of_birth" />

            <TextView
                android:id="@+id/series"
                style="@style/TableItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_1"
                android:layout_weight="1"
                android:text="@string/series" />

            <TextView
                android:id="@+id/gender"
                style="@style/TableItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_1"
                android:layout_weight="1"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/color"
                style="@style/TableItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_1"
                android:layout_weight="1"
                android:text="@string/color" />

            <TextView
                android:id="@+id/vaccine"
                style="@style/TableItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_1"
                android:layout_weight="1"
                android:text="@string/vaccine" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_4"
            android:background="@color/white" />
    </TableLayout>

    <ListView
        android:id="@+id/records_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>