<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="@dimen/space_53"
        android:layout_height="@dimen/space_53"
        android:layout_marginStart="@dimen/space_20"
        android:background="@drawable/bg_round_white_ripple"
        android:contentDescription="@null"
        android:src="@drawable/ic_back_button"
        android:translationZ="@dimen/space_12"
        app:layout_constraintBottom_toBottomOf="@id/welcome_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_label"
        style="@style/SubTitleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top_view_profiles"
        android:gravity="center"
        android:paddingTop="@dimen/space_40"
        android:paddingBottom="@dimen/space_40"
        android:text="@string/add_new_pigeon"
        android:translationZ="@dimen/space_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_10"
        android:contentDescription="@null"
        android:src="@drawable/ic_progress_bar_dummy"
        android:translationZ="@dimen/space_10"
        app:layout_constraintBottom_toBottomOf="@id/welcome_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_pigeon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_8"
        android:layout_marginTop="@dimen/space_15"
        android:layout_marginBottom="@dimen/space_5"
        android:background="@drawable/rounded_blue_corners"
        app:cardCornerRadius="@dimen/space_21"
        app:layout_constraintCircleRadius="@dimen/space_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_label">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_29"
            android:layout_marginTop="@dimen/space_20"
            android:background="@drawable/selector_gender_pigeon_btn"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/space_10"
            android:paddingVertical="@dimen/space_5"
            app:layout_constraintRight_toLeftOf="@id/rl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/pigeon_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/selector_sign_gender_pigeon_btn" />

            <!--                style="@style/PigeonColor"-->
            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccpDialog_showPhoneCode="false"
                app:ccp_contentColor="@color/white"
                app:ccp_defaultNameCode="RO"
                app:ccp_showFlag="false"
                app:ccp_showNameCode="true"
                app:ccp_showPhoneCode="false" />

            <!--                style="@style/PigeonColor"-->
            <EditText
                android:id="@+id/pigeon_series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_white_button"
                android:hint="@string/series"
                android:inputType="text"
                android:maxEms="4"
                android:paddingHorizontal="@dimen/space_6"
                android:paddingVertical="@dimen/space_3"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray" />

            <!--            style="@style/PigeonColor"-->
            <TextView
                android:id="@+id/pigeon_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:focusable="true"
                tools:text="" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--        style="@style/PigeonNickname"-->
        <EditText
            android:id="@+id/pigeon_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_32"
            android:layout_marginTop="@dimen/space_5"
            android:background="@color/regular_blue"
            android:backgroundTint="@color/transparent"
            android:hint="@string/nickname"
            android:inputType="textMultiLine|textVisiblePassword"
            android:maxEms="6"
            app:layout_constraintRight_toLeftOf="@id/rl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llc" />

        <!--        style="@style/PigeonColor"-->
        <EditText
            android:id="@+id/pigeon_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_32"
            android:layout_marginTop="@dimen/space_5"
            android:background="@color/regular_blue"
            android:backgroundTint="@color/transparent"
            android:hint="@string/color"
            android:inputType="textVisiblePassword"
            android:maxEms="5"
            app:layout_constraintRight_toLeftOf="@id/rl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pigeon_nickname" />

        <!--        style="@style/PigeonDetails"-->
        <EditText
            android:id="@+id/pigeon_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_32"
            android:layout_marginTop="@dimen/space_5"
            android:background="@color/regular_blue"
            android:backgroundTint="@color/transparent"
            android:hint="@string/details_about_the_pigeon"
            android:inputType="textMultiLine|textVisiblePassword"
            android:maxEms="8"
            android:paddingBottom="@dimen/space_20"
            app:layout_constraintRight_toLeftOf="@id/rl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pigeon_color" />

        <RelativeLayout
            android:id="@+id/rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_20"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="@dimen/space_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/image"
                android:layout_width="@dimen/space_150"
                android:layout_height="@dimen/space_150"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="@dimen/space_25">

                <ImageView
                    android:id="@+id/add_pigeon_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@drawable/ic_pigeon_image_placeholder" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/space_40"
                android:layout_height="@dimen/space_40"
                android:layout_alignTop="@id/image"
                android:layout_alignEnd="@id/image"
                android:layout_marginTop="@dimen/space_15"
                android:layout_marginEnd="@dimen/space_15"
                android:backgroundTint="@color/regular_blue"
                app:cardCornerRadius="@dimen/space_20">

                <ImageView
                    android:id="@+id/add_pigeon_eye_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@drawable/ic_pigeon_eye_placeholder"
                    android:translationZ="@dimen/space_5" />
            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/save_pigeon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_white_button"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:translationZ="@dimen/space_10"
        app:layout_constraintBottom_toBottomOf="@id/footer_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/footer_textview">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:padding="@dimen/space_7"
            android:src="@drawable/ic_save"
            android:visibility="visible" />

        <TextView
            style="@style/SubTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/space_7"
            android:text="@string/save_pigeon"
            android:textColor="@color/light_blue" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/footer_textview"
        style="@style/SubTitleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_view_profiles"
        android:gravity="center"
        android:paddingTop="@dimen/space_25"
        android:paddingBottom="@dimen/space_25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>